--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
+    <Reference Include="WebApi.Repositories">
+      <HintPath>path\to\WebApi.Repositories.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
